@@ -1,19 +1,19 @@
 <?php
-// $Id: views_module.test,v 1.1.4.2 2010-04-29 18:26:02 merlinofchaos Exp $
+// $Id: views_module.test,v 1.1.4.3 2010-11-18 01:37:41 merlinofchaos Exp $
 module_load_include('test', 'views', 'tests/views_query');
 class viewsModuleTest extends ViewsSqlTest {
   public static function getInfo() {
     return array(
-    'name' => 'Tests views.module',
-    'description' => 'Tests some basic functions of views.module',
-    'group' => 'Views',
+      'name' => 'Tests views.module',
+      'description' => 'Tests some basic functions of views.module',
+      'group' => 'Views',
     );
   }
-  
+
   public function setUp() {
     parent::setUp();
   }
-  
+
   public function test_views_trim_text() {
     // Test unicode, @see http://drupal.org/node/513396#comment-2839416
     $text = array(
@@ -58,12 +58,22 @@ class viewsModuleTest extends ViewsSqlTest {
       'сд асд',
       'асд асд',
     );
-    
+
     foreach ($text as $key => $line) {
       $result_text = views_trim_text($alter, $line);
-      debug($result_text);
-      debug($expect[$key]);
       $this->assertEqual($result_text, $expect[$key]);
     }
+  }
+  
+  /**
+   * Tests the dynamic includes of templates via module feature.
+   */
+  function testModuleTemplates() {
+    $views_status = variable_get('views_defaults', array());
+    $views_status['frontpage'] = FALSE; // false is enabled
+    variable_set('views_defaults', $views_status);
+    
+    $registry = theme_get_registry();
+    $this->assertTrue(isset($registry['views_view__frontpage']));
   }
 }
